syntax = "proto3";

package identity.service.v1;

import "gnostic/openapi/v3/annotations.proto";

import "google/protobuf/empty.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";

import "pagination/v1/pagination.proto";
import "identity/service/v1/user.proto";

// 租户服务
service TenantService {
  // 查询租户列表
  rpc List (pagination.PagingRequest) returns (ListTenantResponse) {}

  // 统计租户数量
  rpc Count (pagination.PagingRequest) returns (CountTenantResponse) {}

  // 查询租户详情
  rpc Get (GetTenantRequest) returns (Tenant) {}
  // 批量创建租户
  rpc BatchCreate (BatchCreateTenantsRequest) returns (BatchCreateTenantsResponse) {}

  // 创建租户
  rpc Create (CreateTenantRequest) returns (Tenant) {}

  // 更新租户
  rpc Update (UpdateTenantRequest) returns (google.protobuf.Empty) {}

  // 删除租户
  rpc Delete (DeleteTenantRequest) returns (google.protobuf.Empty) {}

  // 租户是否存在
  rpc TenantExists (TenantExistsRequest) returns (TenantExistsResponse) {}

  // 分配租户管理员
  rpc AssignTenantAdmin(AssignTenantAdminRequest) returns (google.protobuf.Empty) {}
}

// 租户
message Tenant {
  // 租户状态
  enum Status {
    OFF = 0;         // 禁用
    ON = 1;          // 启用
    EXPIRED = 2;     // 过期
    FREEZE = 3;      // 冻结
  }

  // 租户类型
  enum Type {
    TENANT_TYPE_UNSPECIFIED = 0; // 未指定

    TRIAL = 1;       // 试用
    PAID = 2;        // 付费
    INTERNAL = 3;    // 内部
    PARTNER = 4;     // 合作伙伴
    CUSTOM = 5;      // 定制
  }

  // 租户审核状态
  enum AuditStatus {
    TENANT_AUDIT_STATUS_UNSPECIFIED = 0; // 未指定

    PENDING = 1;      // 待审核
    APPROVED = 2;     // 审核通过
    REJECTED = 3;     // 审核拒绝
  }

  optional uint32 id = 1 [
    json_name = "id",
    (gnostic.openapi.v3.property) = {description: "租户ID"}
  ];  // 租户ID

  optional string name = 2 [
    json_name = "name",
    (gnostic.openapi.v3.property) = {description: "租户名称"}
  ];  // 租户名称

  optional string code = 3 [
    json_name = "code",
    (gnostic.openapi.v3.property) = {description: "租户编码"}
  ];  // 租户编码

  optional string domain = 4 [
    json_name = "domain",
    (gnostic.openapi.v3.property) = {description: "租户专属域名"}
  ];  // 租户专属域名

  optional string logo_url = 5 [
    json_name = "logoUrl",
    (gnostic.openapi.v3.property) = {description: "租户logo地址"}
  ];  // 租户logo地址

  optional string industry = 6 [
    json_name = "industry",
    (gnostic.openapi.v3.property) = {description: "所属行业（如“互联网”“金融”“制造”）"}
  ];  // 所属行业

  optional Type type = 7 [(gnostic.openapi.v3.property) = {description: "租户类型"}]; // 租户类型

  optional string remark = 8 [
    json_name = "remark",
    (gnostic.openapi.v3.property) = {description: "备注"}
  ]; // 备注

  optional uint32 admin_user_id = 10 [
    json_name = "adminUserId",
    (gnostic.openapi.v3.property) = {description: "管理员用户ID"}
  ];  // 管理员用户ID

  optional string admin_user_name = 11 [
    json_name = "adminUserName",
    (gnostic.openapi.v3.property) = {description: "管理员用户名"}
  ];  // 管理员用户名

  optional google.protobuf.Timestamp subscription_at = 20 [
    json_name = "subscriptionAt",
    (gnostic.openapi.v3.property) = {description: "订阅时间（首次订阅/续费时间，NULL表示未订阅）"}
  ]; // 订阅时间（首次订阅/续费时间，NULL表示未订阅）
  optional google.protobuf.Timestamp unsubscribe_at = 21 [
    json_name = "unsubscribeAt",
    (gnostic.openapi.v3.property) = {description: "取消订阅时间"}
  ]; // 取消订阅时间（NULL表示未取消）
  optional google.protobuf.Timestamp expired_at = 22 [
    json_name = "expiredAt",
    (gnostic.openapi.v3.property) = {description: "租户有效期（NULL表示永久，过期后状态自动改为“过期”）"}
  ]; // 租户有效期（NULL表示永久，过期后状态自动改为“过期”）
  optional string subscription_plan = 23 [
    json_name = "subscriptionPlan",
    (gnostic.openapi.v3.property) = {description: "订阅套餐（如“企业版1年”“基础版3个月”）"}
  ]; // 订阅套餐（如“企业版1年”“基础版3个月”）

  optional int32 member_count = 30 [
    json_name = "memberCount",
    (gnostic.openapi.v3.property) = {description: "成员数量"}
  ];  // 成员数量

  optional Status status = 31 [(gnostic.openapi.v3.property) = {description: "租户状态"}]; // 租户状态

  optional AuditStatus audit_status = 32 [
    json_name = "auditStatus",
    (gnostic.openapi.v3.property) = {description: "审核状态"}
  ]; // 审核状态

  optional uint32 created_by = 100 [json_name = "createdBy", (gnostic.openapi.v3.property) = {description: "创建者用户ID"}]; // 创建者用户ID
  optional uint32 updated_by = 101 [json_name = "updatedBy", (gnostic.openapi.v3.property) = {description: "更新者用户ID"}]; // 更新者用户ID
  optional uint32 deleted_by = 102 [json_name = "deletedBy", (gnostic.openapi.v3.property) = {description: "删除者用户ID"}]; // 删除者用户ID

  optional google.protobuf.Timestamp created_at = 200 [json_name = "createdAt", (gnostic.openapi.v3.property) = {description: "创建时间"}];// 创建时间
  optional google.protobuf.Timestamp updated_at = 201 [json_name = "updatedAt", (gnostic.openapi.v3.property) = {description: "更新时间"}];// 更新时间
  optional google.protobuf.Timestamp deleted_at = 202 [json_name = "deletedAt", (gnostic.openapi.v3.property) = {description: "删除时间"}];// 删除时间
}

// 租户列表 - 答复
message ListTenantResponse {
  repeated Tenant items = 1;
  uint64 total = 2;
}

// 租户数据 - 请求
message GetTenantRequest {
  oneof query_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "租户编码", read_only: true},
      json_name = "code"
    ]; // 租户编码

    string name = 3 [
      (gnostic.openapi.v3.property) = {description: "租户名称", read_only: true},
      json_name = "name"
    ]; // 租户名称
  }

  optional google.protobuf.FieldMask view_mask = 100 [
    json_name = "viewMask",
    (gnostic.openapi.v3.property) = {
      description: "视图字段过滤器，用于控制返回的字段"
    }
  ]; // 视图字段过滤器，用于控制返回的字段
}

// 创建租户 - 请求
message CreateTenantRequest {
  Tenant data = 1;
}

// 更新租户 -请求
message UpdateTenantRequest {
  uint32 id = 1;

  Tenant data = 2;

  google.protobuf.FieldMask update_mask = 3 [
    (gnostic.openapi.v3.property) = {
      description: "要更新的字段列表",
      example: {yaml : "id,realname,username"}
    },
    json_name = "updateMask"
  ]; // 要更新的字段列表

  optional bool allow_missing = 4 [
    (gnostic.openapi.v3.property) = {description: "如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。"},
    json_name = "allowMissing"
  ]; // 如果设置为true的时候，资源不存在则会新增(插入)，并且在这种情况下`updateMask`字段将会被忽略。
}

// 删除租户 - 请求
message DeleteTenantRequest {
  oneof delete_by {
    uint32 id = 1 [
      (gnostic.openapi.v3.property) = {description: "ID", read_only: true},
      json_name = "id"
    ]; // ID

    string code = 2 [
      (gnostic.openapi.v3.property) = {description: "编码", read_only: true},
      json_name = "code"
    ]; // 编码
  }
}

message BatchCreateTenantsRequest {
  repeated Tenant items = 1;
}
message BatchCreateTenantsResponse {
  repeated int32 created_ids = 1 [
    json_name = "createdIds",
    (gnostic.openapi.v3.property) = {
      description: "创建成功的租户ID列表"
    }
  ]; // 创建成功的租户ID列表
}

// 租户是否存在 - 请求
message TenantExistsRequest {
  string code = 1 [
    (gnostic.openapi.v3.property) = {description: "租户编码", read_only: true},
    json_name = "code"
  ]; // 租户编码

  string name = 2 [
    (gnostic.openapi.v3.property) = {description: "租户名称", read_only: true},
    json_name = "name"
  ]; // 租户名称
}
// 租户是否存在 - 答复
message TenantExistsResponse {
  bool exist = 1;
}


// 创建租户及管理员用户 - 请求
message CreateTenantWithAdminUserRequest {
  identity.service.v1.Tenant tenant = 1;
  identity.service.v1.User user = 2;
  string password = 3;
}

message CountTenantResponse {
  uint64 count = 1;
}

message AssignTenantAdminRequest {
  uint32 tenant_id = 1 [
    (gnostic.openapi.v3.property) = {description: "租户ID"},
    json_name = "tenantId"
  ]; // 租户ID

  uint32 user_id = 2 [
    (gnostic.openapi.v3.property) = {description: "用户ID"},
    json_name = "userId"
  ]; // 用户ID
}
